Add Short.io DNS record for surveys.prx.org

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1423,6 +1423,18 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub on.${Domain}
+  ShortIo:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: Short.io
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - "52.21.33.16"
+            - "52.2.56.64"
+          TTL: "300"
+          Type: A
+          Name: !Sub surveys.${Domain}
   Fixer:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
