--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -179,6 +179,7 @@ Resources:
         CodeS3ObjectVersion: !Ref DovetailTrafficLambdaCodeS3ObjectVersion
         DownloaderBatchSize: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-traffic-lambda/DOWNLOADER_BATCH_SIZE"
         ScheduleIntervalMinutes: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-traffic-lambda/SCHEDULE_INTERVAL_MINUTES"
+        MetricsKinesisStream: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-traffic-lambda/METRICS_KINESIS_STREAM"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
