--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1435,6 +1435,12 @@ Resources:
           TTL: "300"
           Type: A
           Name: !Sub surveys.${Domain}
+        - ResourceRecords:
+            - "52.21.33.16"
+            - "52.2.56.64"
+          TTL: "300"
+          Type: A
+          Name: !Sub survey.${Domain}
   Fixer:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
