Add 99pi feed DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -79,3 +79,6 @@ Resources:
 
         - { Type: A,    Name: !Sub "pf7781thda.${Domain}", AliasTarget: { DNSName: "d33abw8xtii3oc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf7781thda.${Domain}", AliasTarget: { DNSName: "d33abw8xtii3oc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        - { Type: A,    Name: !Sub "pf9900piiv.${Domain}", AliasTarget: { DNSName: "d3dz0oifs6y76j.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf9900piiv.${Domain}", AliasTarget: { DNSName: "d3dz0oifs6y76j.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
