Update pattern constraint on project tag

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -123,8 +123,8 @@ Metadata:
 Parameters:
   ProjectTag:
     Type: String
-    AllowedPattern: ^.+$
-    ConstraintDescription: must not be blank
+    AllowedPattern: ^([\p{L}\p{Z}\p{N}_.:\/=+\-@]+)$
+    ConstraintDescription: must not be blank and cannot contain some special characters
     Description: >
       The value used for the Project tag on resources that support tagging.
   Cnames:
