Un-inline-array-ify

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -524,9 +524,12 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       AlarmName: !Sub "[DovetailRouter][LogErrors] ${EnvironmentType}"
-      AlarmActions: [!Ref OpsErrorMessagesSnsTopicArn]
-      InsufficientDataActions: [!Ref OpsErrorMessagesSnsTopicArn]
-      OKActions: [!Ref OpsErrorMessagesSnsTopicArn]
+      AlarmActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      InsufficientDataActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      OKActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
       AlarmDescription: Logged errors on the dovetail router application
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
@@ -540,9 +543,12 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       AlarmName: !Sub "[DovetailRouter][ALB][Error] ${EnvironmentType} Target 5XX"
-      AlarmActions: [!Ref OpsErrorMessagesSnsTopicArn]
-      InsufficientDataActions: [!Ref OpsErrorMessagesSnsTopicArn]
-      OKActions: [!Ref OpsErrorMessagesSnsTopicArn]
+      AlarmActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      InsufficientDataActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      OKActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
       AlarmDescription: 5XX responses from the dovetail router target group
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
