Switch analytics alarm dimensions to function names

--- a/stacks/serverless/analytics-ingest-alarms.yml
+++ b/stacks/serverless/analytics-ingest-alarms.yml
@@ -14,11 +14,19 @@ Parameters:
     Type: String
   BigqueryFunctionArn:
     Type: String
+  BigqueryFunctionName:
+    Type: String
   DynamodbFunctionArn:
+    Type: String
+  DynamodbFunctionName:
     Type: String
   PingbacksFunctionArn:
     Type: String
+  PingbacksFunctionName:
+    Type: String
   RedisFunctionArn:
+    Type: String
+  RedisFunctionName:
     Type: String
 Resources:
   AnalyticsBigqueryErrorAlarm:
@@ -44,7 +52,7 @@ Resources:
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
-          Value: !Ref BigqueryFunctionArn
+          Value: !Ref BigqueryFunctionName
   AnalyticsBigqueryIteratorAgeWarnAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
@@ -68,7 +76,7 @@ Resources:
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
-          Value: !Ref BigqueryFunctionArn
+          Value: !Ref BigqueryFunctionName
   AnalyticsBigqueryIteratorAgeFatalAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
@@ -92,7 +100,7 @@ Resources:
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
-          Value: !Ref BigqueryFunctionArn
+          Value: !Ref BigqueryFunctionName
   AnalyticsDynamodbErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
@@ -116,7 +124,7 @@ Resources:
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
-          Value: !Ref DynamodbFunctionArn
+          Value: !Ref DynamodbFunctionName
   AnalyticsDynamodbIteratorAgeWarnAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
@@ -140,7 +148,7 @@ Resources:
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
-          Value: !Ref DynamodbFunctionArn
+          Value: !Ref DynamodbFunctionName
   AnalyticsDynamodbIteratorAgeFatalAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
@@ -164,7 +172,7 @@ Resources:
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
-          Value: !Ref DynamodbFunctionArn
+          Value: !Ref DynamodbFunctionName
   AnalyticsPingbacksErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
@@ -188,7 +196,7 @@ Resources:
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
-          Value: !Ref PingbacksFunctionArn
+          Value: !Ref PingbacksFunctionName
   AnalyticsPingbacksIteratorAgeWarnAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
@@ -212,7 +220,7 @@ Resources:
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
-          Value: !Ref PingbacksFunctionArn
+          Value: !Ref PingbacksFunctionName
   AnalyticsPingbacksIteratorAgeFatalAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
@@ -236,7 +244,7 @@ Resources:
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
-          Value: !Ref PingbacksFunctionArn
+          Value: !Ref PingbacksFunctionName
   AnalyticsRedisErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
@@ -260,7 +268,7 @@ Resources:
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
-          Value: !Ref RedisFunctionArn
+          Value: !Ref RedisFunctionName
   AnalyticsRedisIteratorAgeWarnAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
@@ -284,7 +292,7 @@ Resources:
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
-          Value: !Ref RedisFunctionArn
+          Value: !Ref RedisFunctionName
   AnalyticsRedisIteratorAgeFatalAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
@@ -308,4 +316,4 @@ Resources:
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
-          Value: !Ref RedisFunctionArn
+          Value: !Ref RedisFunctionName
