--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -328,9 +328,13 @@ Resources:
             !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         BigqueryFunctionArn: !GetAtt AnalyticsIngestLambdasStack.Outputs.BigqueryFunctionArn
+        BigqueryFunctionName: !GetAtt AnalyticsIngestLambdasStack.Outputs.BigqueryFunctionName
         DynamodbFunctionArn: !GetAtt AnalyticsIngestLambdasStack.Outputs.DynamodbFunctionArn
+        DynamodbFunctionName: !GetAtt AnalyticsIngestLambdasStack.Outputs.DynamodbFunctionName
         PingbacksFunctionArn: !GetAtt AnalyticsIngestLambdasStack.Outputs.PingbacksFunctionArn
+        PingbacksFunctionName: !GetAtt AnalyticsIngestLambdasStack.Outputs.PingbacksFunctionName
         RedisFunctionArn: !GetAtt AnalyticsIngestLambdasStack.Outputs.RedisFunctionArn
+        RedisFunctionName: !GetAtt AnalyticsIngestLambdasStack.Outputs.RedisFunctionName
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
