Fix Lambda handler name

--- a/etc/adzerk-poller/template.yml
+++ b/etc/adzerk-poller/template.yml
@@ -66,7 +66,7 @@ Resources:
             Enabled: true
             Schedule: rate(1 hour)
           Type: Schedule
-      Handler: lambda_function.handler
+      Handler: lambda_function.lambda_handler
       MemorySize: 128
       Role: !GetAtt PollerFunctionIamRole.Arn
       Runtime: python3.6
