--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -82,3 +82,6 @@ Resources:
 
         - { Type: A,    Name: !Sub "pf9900piiv.${Domain}", AliasTarget: { DNSName: "d3dz0oifs6y76j.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf9900piiv.${Domain}", AliasTarget: { DNSName: "d3dz0oifs6y76j.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        - { Type: A,    Name: !Sub "pf6060flmf.${Domain}", AliasTarget: { DNSName: "d1fnuznooyf4ci.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf6060flmf.${Domain}", AliasTarget: { DNSName: "d1fnuznooyf4ci.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
