--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -371,13 +371,13 @@ Resources:
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "pixel.prx.org.yml"]]
       TimeoutInMinutes: 15
-  PorterStack:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      Tags:
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "porter.yml"]]
-      TimeoutInMinutes: 15
+  # PorterStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     Tags:
+  #       - Key: "prx:cloudformation:stack-name"
+  #         Value: !Ref AWS::StackName
+  #       - Key: "prx:cloudformation:stack-id"
+  #         Value: !Ref AWS::StackId
+  #     TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "porter.yml"]]
+  #     TimeoutInMinutes: 15
