Fix outdated comments

--- a/etc/commitchange-ses/template.yml
+++ b/etc/commitchange-ses/template.yml
@@ -1,4 +1,4 @@
-# etc/commitchange-ses.yml
+# etc/commitchange-ses/template.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 Description: >
