Give augury staging a higher memory hard limit

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -338,7 +338,7 @@ Resources:
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
         SecretsBase: !Ref SecretsBase
-        ContainerMemory: !Ref ContainerMemory
+        ContainerMemory: !If [IsProduction, !Ref ContainerMemory, 2000]
         ContainerMemoryReservation: !Ref ContainerMemoryReservation
         ContainerCpu: !Ref ContainerCpu
         PlatformALBListenerPriorityPrefix: !Ref AuguryPlatformALBListenerPriorityPrefix
