Put augury on a box by itself

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -339,7 +339,7 @@ Resources:
         EcrRegion: !Ref EcrRegion
         SecretsBase: !Ref SecretsBase
         ContainerMemory: !If [IsProduction, !Ref ContainerMemory, 2000]
-        ContainerMemoryReservation: !Ref ContainerMemoryReservation
+        ContainerMemoryReservation: !If [IsProduction, !Ref ContainerMemoryReservation, 1800]
         ContainerCpu: !Ref ContainerCpu
         PlatformALBListenerPriorityPrefix: !Ref AuguryPlatformALBListenerPriorityPrefix
         EcrImageTag: !Ref AuguryEcrImageTag
