Update TRAX DNS

--- a/dns/trax.fm-hosted-zone.yml
+++ b/dns/trax.fm-hosted-zone.yml
@@ -86,7 +86,7 @@ Resources:
             - verify.squarespace.com.
           TTL: "300"
           Type: CNAME
-          Name: !Sub s92xmll9f5b5h3zgtwxe.${Domain}
+          Name: !Sub 7k9faptab68jpw26h62y.${Domain}
   Zendesk:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
