--- a/dns/radiotopia.fm-hosted_zone.yml
+++ b/dns/radiotopia.fm-hosted_zone.yml
@@ -252,10 +252,10 @@ Resources:
           Type: CNAME
           Name: !Sub _d08d1dd9ebb8f0903008027de35c7443.media.${Domain}
         - ResourceRecords:
-            - _751235ff1895ca10dd7cc14055b3dea1.ltfvzjuylp.acm-validations.aws.
+            - _fc9392af0c0798539c03622e6a298c83.auiqqraehs.acm-validations.aws.
           TTL: "300"
           Type: CNAME
-          Name: !Sub _50ef77befc9c1519cc2382daddca8d20.plus.${Domain}
+          Name: !Sub _527919f09cd53f2d466afab5136dba0f.plus.${Domain}
         - ResourceRecords:
             - _35433c66939db2c77a310172c59b43c2.ltfvzjuylp.acm-validations.aws.
           TTL: "300"
