--- a/dns/radiotopia.fm-hosted_zone.yml
+++ b/dns/radiotopia.fm-hosted_zone.yml
@@ -221,13 +221,13 @@ Resources:
         - Type: A
           Name: !Sub plus.${Domain}
           AliasTarget:
-            DNSName: d3vzcik9lcbfzv.cloudfront.net.
+            DNSName: dlbhchudv5ekb.cloudfront.net.
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
         - Type: AAAA
           Name: !Sub plus.${Domain}
           AliasTarget:
-            DNSName: d3vzcik9lcbfzv.cloudfront.net.
+            DNSName: dlbhchudv5ekb.cloudfront.net.
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
   Aws:
