Reset augury back to less memory/cpu; add 2nd web for scaling redundancy

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -338,8 +338,8 @@ Resources:
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
         SecretsBase: !Ref SecretsBase
-        ContainerMemory: !If [IsProduction, !Ref ContainerMemory, 2000]
-        ContainerMemoryReservation: !If [IsProduction, !Ref ContainerMemoryReservation, 1800]
+        ContainerMemory: !Ref ContainerMemory
+        ContainerMemoryReservation: !Ref ContainerMemoryReservation
         ContainerCpu: !Ref ContainerCpu
         PlatformALBListenerPriorityPrefix: !Ref AuguryPlatformALBListenerPriorityPrefix
         EcrImageTag: !Ref AuguryEcrImageTag
@@ -348,7 +348,7 @@ Resources:
         CreateWorker: "true"
         ContainerPort: "3000"
         HealthCheckPath: "/health_check"
-        DesiredWebs: "1"
+        DesiredWebs: "2"
         DesiredWebsProduction: "1"
       Tags:
         - Key: "prx:cloudformation:stack-name"
