Lower DDB timeout; enable xray

--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -91,6 +91,7 @@ Resources:
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaKinesisExecutionRole"
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
+        - "arn:aws:iam::aws:policy/AWSXrayWriteOnlyAccess"
       Tags:
         - Key: Project
           Value: Dovetail
@@ -156,7 +157,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-      Timeout: 30
+      Timeout: 10
   AnalyticsPingbacksLambdaFunction:
     Type: "AWS::Lambda::Function"
     Properties:
