Track how long agents have been disconnected

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -767,6 +767,9 @@ Resources:
                   - ecs:DescribeTaskDefinition
                   - ecs:ListContainerInstances
                   - ecs:ListServices
+                  - ecs:DescribeClusters
+                  - ecs:ListTagsForResource
+                  - ecs:TagResource
               - Effect: "Allow"
                 Resource: "*" # TODO: how to get an ASG ARN?
                 Action:
