More metric filters for dovetail router

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -511,6 +511,60 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
   # Dovetail Elixir Alarms
+  DovetailRouterLogDownloadsMetric:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.msg = "impression" }'
+      LogGroupName: !Ref DovetailRouterLogGroup
+      MetricTransformations:
+        - MetricName: !Sub "dovetail_router_downloads_${EnvironmentTypeAbbreviation}"
+          MetricNamespace: LogMetrics
+          MetricValue: "1"
+  DovetailRouterLogImpressionsMetric:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.msg = "impression" }'
+      LogGroupName: !Ref DovetailRouterLogGroup
+      MetricTransformations:
+        - MetricName: !Sub "dovetail_router_impressions_${EnvironmentTypeAbbreviation}"
+          MetricNamespace: LogMetrics
+          MetricValue: "$.download.adCount"
+  DovetailRouterLogDepressionsMetric:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.msg = "depression" }'
+      LogGroupName: !Ref DovetailRouterLogGroup
+      MetricTransformations:
+        - MetricName: !Sub "dovetail_router_depressions_${EnvironmentTypeAbbreviation}"
+          MetricNamespace: LogMetrics
+          MetricValue: "1"
+  DovetailRouterLogRepressionsMetric:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.msg = "repression" }'
+      LogGroupName: !Ref DovetailRouterLogGroup
+      MetricTransformations:
+        - MetricName: !Sub "dovetail_router_repressions_${EnvironmentTypeAbbreviation}"
+          MetricNamespace: LogMetrics
+          MetricValue: "1"
+  DovetailRouterLogVanillasMetric:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.msg = "impression" && $.download.adCount = 0 }'
+      LogGroupName: !Ref DovetailRouterLogGroup
+      MetricTransformations:
+        - MetricName: !Sub "dovetail_router_vanillas_${EnvironmentTypeAbbreviation}"
+          MetricNamespace: LogMetrics
+          MetricValue: "1"
+  DovetailRouterLogWarnsMetric:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.level = "warn" }'
+      LogGroupName: !Ref DovetailRouterLogGroup
+      MetricTransformations:
+        - MetricName: !Sub "dovetail_router_warns_${EnvironmentTypeAbbreviation}"
+          MetricNamespace: LogMetrics
+          MetricValue: "1"
   DovetailRouterLogErrorsMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
