Fix metadata for CloudFront compress parameter

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -68,6 +68,7 @@ Metadata:
           - CloudFrontViewerProtocolPolicy
           - CloudFrontCachedMethods
           - CloudFrontAllowedMethods
+          - CloudFrontCompress
           - CloudFrontDefaultTtl
           - CloudFrontMinTtl
           - CloudFrontMaxTtl
@@ -111,6 +112,8 @@ Metadata:
         default: Allowed methods
       CloudFrontCachedMethods:
         default: Cached methods
+      CloudFrontCompress:
+        default: Compress objects automatically
       CloudFrontOriginAccess:
         default: Origin access identity
       CloudFrontOriginProtocolPolicy:
